refactored Api for new Databasestructure and refactored the api-specification
